--- a/gb/24/7/29/n14300532.md
+++ b/gb/24/7/29/n14300532.md
@@ -6,7 +6,7 @@
 <h6>2024年7月28日，女子100米蝶泳，美国选手托丽?胡斯克（右）和队友格雷琴?沃尔什包揽冠亚军。(Quinn Rooney/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2024年07月29日讯】（大纪元记者张雨霏综合报导）2024年巴黎奥运会正如火如荼地进行着，作为基础大项之一，游泳项目一直以来备受体育迷关注。在刚刚过去的两个比赛日中，包含男、女400米自由泳，男、女4×100米自由泳接力，男子400米个人混合泳，女子100米蝶泳，以及男子100米蛙泳，七场决赛的结果已经出炉。目前，美国在该项目中获得的奖牌总数最多，共计为7枚。</p>
+	<p>【大纪元2024年07月29日讯】（大纪元记者张雨霏综合报导）2024年巴黎奥运会正如火如荼地进行着，作为基础大项之一，游泳项目一直以来备受体育迷关注。在刚刚过去的两个比赛日中，包含男、女400米自由泳，男、女4×100米自由泳接力，男子400米个人混合泳，女子100米蝶泳，以及男子100米蛙泳，七场决赛的结果已经出炉。目前，美国队在该项目中获得的奖牌总数最多，共计7枚。</p>
 <p>本文将带您一睹各项目金牌得主的风采。</p>
 <h2>男子400米自由泳</h2>
 <p>首枚游泳金牌归属来自德国马格德堡的22岁选手卢卡斯?梅尔滕斯（Lukas Maertens）。作为头号热门选手和预赛速度最快的选手，梅尔滕斯在男子400米自由泳决赛中从第四泳道出发，最终以3分41秒78的成绩击败澳大利亚选手伊莱贾?温宁顿（Elijah Winnington，3分42秒21）和韩国选手金宇民（Kim Woomin，3分42秒50），取得职业生涯迄今为止最辉煌的成就，同时也为德国队在巴黎奥运会上赢得开门红。</p>
@@ -31,6 +31,7 @@
 <p>位于法国圣但尼的水上运动中心诞生了在第二个比赛日的第一枚游泳金牌，万众瞩目的世界纪录缔造者莱昂?马尔尚（Léon Marchand）顺利将男子400米个人混合泳的金牌带回了东道主手中。</p>
 <p>在400米的混合泳竞技中，马尔尚凭借超强的出发转身和全面的泳姿能力，不断扩大他在泳池中的优势。虽然未能打破自己先前创造的世界纪录，但他以4分02秒95的成绩打破了菲尔普斯在2008年创下的奥运纪录，将这枚金牌毫无悬念地收入囊中。</p>
 <p>该项比赛第二、三名的竞争异常激烈，日本选手松下知之（Matsushita Tomoyuki）最终以0.04秒的微弱优势战胜了美国选手卡森?福斯特（Carson Foster），获得银牌。</p>
+<figure id="attachment_14300354" aria-describedby="caption-attachment-14300354" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14300354-GettyImages-2164086631-e1722256388843.jpg"><img decoding="async" class="size-large wp-image-14300354" src="https://i.epochtimes.com/assets/uploads/2024/07/id14300354-GettyImages-2164086631-600x396.jpg" alt="" width="600" b="396" /></a><figcaption id="caption-attachment-14300354" class="wp-caption-text">2024年7月28日，男子400米个人混合泳，世界纪录保持者、东道主名将莱昂?马尔尚以4分02秒95的成绩，创造了新的奥运会纪录，夺得个人职业生涯第一枚奥运金牌。(Sarah Stier/Getty Images)</figcaption></figure>
 <figure id="attachment_14300603" aria-describedby="caption-attachment-14300603" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14300603-GettyImages-2164092518.jpg"><img decoding="async" class="size-large wp-image-14300603" src="https://i.epochtimes.com/assets/uploads/2024/07/id14300603-GettyImages-2164092518-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14300603" class="wp-caption-text">2024年7月28日，男子400米个人混合泳，法国队金牌得主莱昂?马尔尚登上颁奖台开心庆祝。 (Quinn Rooney/Getty Images)</figcaption></figure>
 <figure id="attachment_14300604" aria-describedby="caption-attachment-14300604" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14300604-GettyImages-2164091110.jpg"><img decoding="async" class="size-large wp-image-14300604" src="https://i.epochtimes.com/assets/uploads/2024/07/id14300604-GettyImages-2164091110-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14300604" class="wp-caption-text">2024年7月28日，男子400米个人混合泳，法国队金牌得主莱昂?马尔尚登上颁奖台开心庆祝。(Clive Rose/Getty Images)</figcaption></figure>
 <p><ahref="https://i.epochtimes.com/assets/uploads/2024/07/id14300602-GettyImages-2164091110.jpg"><img class="aligncenter size-large wp-image-14300602" alt="" /></a></p>
@@ -44,35 +45,34 @@
 <figure id="attachment_14300615" aria-describedby="caption-attachment-14300615" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14300615-GettyImages-2163610294.jpg"><img decoding="async" class="size-large wp-image-14300615" src="https://i.epochtimes.com/assets/uploads/2024/07/id14300615-GettyImages-2163610294-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14300615" class="wp-caption-text">2024年7月28日，意大利泳将尼科洛?马丁嫩吉在男子100米蛙泳决赛中上演精彩翻盘大战，以59秒03获得冠军。(Jonathan Nackstrand/AFP via Getty Images)</figcaption></figure>
 <figure id="attachment_14300616" aria-describedby="caption-attachment-14300616" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14300616-GettyImages-2164099875.jpg"><img decoding="async" class="size-large wp-image-14300616" src="https://i.epochtimes.com/assets/uploads/2024/07/id14300616-GettyImages-2164099875-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14300616" class="wp-caption-text">2024年7月28日，男子100米蛙泳，意大利队金牌得主尼科洛?马丁嫩吉登上颁奖台开心庆祝。 (Quinn Rooney/Getty Images)</figcaption></figure>
 <p>责任编辑：叶紫微#</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299812.md#1">巴黎奥运首枚个人金牌出炉 澳选手摘金</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299869.md#1">奥运首日 澳洲夺三金居首 美法各夺一金</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299991.md#1">巴黎奥运｜香港女子重剑江旻憓夺得金牌</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14300110.md#1">奥运：韩国队包揽女子10米气手枪冠、亚军</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/21/n13321190.md#1">【古韵流芳】长恨歌引传奇 白居易的来世夙愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293954.md#1">【环球直击】新冠阳性 拜登取消演讲返特拉华州</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293741.md#1">【新闻五人行】川普“索要保护费”言外有意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293760.md#1">【时事金扫描】三峡大坝全力泄洪 武汉危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292157.md#1">方便面疑现鼠头 统一企业中国股价暴跌10%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292166.md#1">成龙新片《传说》票房翻车 出品方面临巨亏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292239.md#1">《不可能8》汤姆克鲁斯再展特技 被倒飞飞机悬挂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292145.md#1">游法国遭路人溅一身可乐 肖战高EQ反应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292855.md#1">章子怡带儿子逛商场 母子俩牵手背影画面温馨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292823.md#1">赵丽颖短发造型登热搜 新发型疑为新片做准备</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291108.md#1">组图：八声杜鹃的歌声与美丽的身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284863.md#1">夏季炎热更需保健 避开七种错误消暑方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291745.md#1">登机证有啥讯息？ 在网上晒照片有多危险？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292522.md#1">减肥太快会导致肌肉流失 专家透露3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290621.md#1">怎么睡都睡不饱？中医解方消三大类疲劳</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/29/n14300532.htm">组图：巴黎奥运游泳比赛 一睹金牌得主风采</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300532.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
